feature: Upgrade version to 1.0.14 and update upload config

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,20 +23,20 @@ kotlin.code.style=official
 # MAVEN CENTRAL
 
 GROUP=com.arasthel.navigation
-VERSION_NAME=1.0.13
+VERSION_NAME=1.0.14
 
 POM_DESCRIPTION=A navigation library
 POM_INCEPTION_YEAR=2021
 
-POM_URL=https://github.com/Arasthel/Navigation
-POM_SCM_URL=https://github.com/Arasthel/Navigation
-POM_SCM_CONNECTION=scm:git@github.com:Arasthel/Navigation.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:Arasthel/Navigation.git
+POM_URL=https://github.com/jmartinesp/Navigation
+POM_SCM_URL=https://github.com/jmartinesp/Navigation
+POM_SCM_CONNECTION=scm:git@github.com:jmartinesp/Navigation.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:jmartinesp/Navigation.git
 
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 
-POM_DEVELOPER_ID=arasthel
-POM_DEVELOPER_NAME=Arasthel
-POM_DEVELOPER_URL=https://github.com/Arasthel
+POM_DEVELOPER_ID=jmartinesp
+POM_DEVELOPER_NAME=jmartinesp
+POM_DEVELOPER_URL=https://github.com/jmartinesp
